--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: Synchronize initscript
   sudo: yes
-  synchronize: src=config/initscripts/smisc-scraper dest=/etc/init.d/smisc-scraper
+  file: src=config/initscripts/smisc-scraper dest=/etc/init.d/smisc-scraper mode=0655
