--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Synchronize manager's initscript
   sudo: yes
-  file: src=config/initscripts/smisc-manager dest=/etc/init.d/smisc-manager mode=0655
+  synchronize: src=config/initscripts/smisc-manager dest=/etc/init.d/smisc-manager
 
 - name: Synchronize monit scripts
   sudo: yes
