--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -25,3 +25,18 @@
   notify:
      - reload monit
 
+- name: Deploy smisc code
+  sudo: yes
+  synchronize: src=src/ dest=/usr/local/src/smisc/
+  notify: 
+    - restart manager
+
+- name: Deploy smisc configuration
+  sudo: yes
+  synchronize: src=../../common/files/config/smisc.ini dest=/usr/local/share/smisc.ini
+  notify:
+    - restart manager
+
+- name: Ensure manager is running
+  sudo: yes
+  service: name=smisc-manager state=started
