Update smisc config

--- a/roles/common/files/config/smisc.ini
+++ b/roles/common/files/config/smisc.ini
@@ -40,11 +40,11 @@ secrets: IqTSFepWjhbsL9yZMPLkDllDmgzAmk7EoJgOBN9Etvws8hEy5i
 [postgres]
 username = pacsocial
 password = 
-host = localhost
+host = 104.131.176.27
 port = 5432
 database = pacsocial
 
 [redis]
-host = localhost
+host = 104.131.176.27
 port = 6379
 database = 0
