--- a/roles/manager/files/config/postgresql/pg_hba.conf
+++ b/roles/manager/files/config/postgresql/pg_hba.conf
@@ -86,6 +86,7 @@ local   all             postgres                                peer
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 host    pacsocial  	pacsocial  	104.131.176.27/32  	trust
+host    pacsocial  	pacsocial  	104.131.71.175/32  	trust
 host    pacsocial  	pacsocial  	127.0.0.1/32  		trust
 
 # "local" is for Unix domain socket connections only
