--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -3,13 +3,19 @@
 
 - name: Deploy smisc code
   synchronize: src=src/ dest=/usr/local/src/smisc/
+  tags: 
+    - hot
   notify: 
     - restart scraper
 
 - name: Deploy smisc configuration
   synchronize: src=../../common/files/config/smisc.ini dest=/usr/local/share/smisc.ini
+  tags: 
+    - hot
   notify:
     - restart scraper
 
 - name: Ensure scraper is running
   service: name=smisc-scraper state=started
+  tags: 
+    - hot
