Add monit handler

--- a/roles/worker/handlers/main.yml
+++ b/roles/worker/handlers/main.yml
@@ -1,2 +1,4 @@
 - name: restart scraper
   service: name=smisc-scraper state=restarted
+- name: restart monit
+  service: name=monit state=restarted
