--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -5,7 +5,7 @@
   synchronize: src=config/initscripts/smisc-scraper dest=/etc/init.d/smisc-scraper
 
 - name: Synchronize monit scripts
-  synchronize: src=config/monit/ dest=/etc/monit/ group=no owner=no perms=no recursive=yes
+  synchronize: src=config/monit/conf.d/ dest=/etc/monit/conf.d/ group=no owner=no perms=no recursive=yes
   notify:
      - restart monit
 
