HUGE FUCKING REFACTOR

--- a/roles/manager/files/config/smisc.ini
+++ b/roles/manager/files/config/smisc.ini
@@ -1,12 +1,9 @@
-[bot]
+[smisc]
 log = /var/local/log/smisc.log
 
-[twitter-manager]
-key = 83UirqBmv5RoEkXpNn8rSa1z0
-secret = YmFhh7c3yr4AwmMtmodNm6MFc2lq60bv6qZanJqSWYbpxAPALC
-
-[twitter-worker]
-keys: funjZzePR12pL6zLC1ptm7il0
+[twitter]
+keys: 83UirqBmv5RoEkXpNn8rSa1z0
+    funjZzePR12pL6zLC1ptm7il0
     pXPnjhn8JsFdX6qCn4srEozIk
     KIlsXFgA40fj9ltxlJDPqbNCd
     tSFWkwSGTuiJAuja81dgcGsvJ
@@ -21,7 +18,8 @@ keys: funjZzePR12pL6zLC1ptm7il0
     2JkBRkn59jBX2Sx0k2ku8POts
     UOJ2fAkVXYUSVTTWXURhwxSe4
     XelyUKLFmlqBQ4KzeOJSiwL1t
-secrets: vHk9m9uotm5LHU8x4ev0t3rUReBAVIqVlWfPUDpEtJ1cbu5gLt
+secrets: YmFhh7c3yr4AwmMtmodNm6MFc2lq60bv6qZanJqSWYbpxAPALC
+    vHk9m9uotm5LHU8x4ev0t3rUReBAVIqVlWfPUDpEtJ1cbu5gLt
     YAbSae6GdAf7GWOmI71myk27VJcmcyAfweG8iNQQJJZzv8OHML
     IqTSFepWjhbsL9yZMPLkDllDmgzAmk7EoJgOBN9Etvws8hEy5i
     Cqx85b9h43fwJveVCj1F015uxHNS0BtMkME0bFPvFXRbFjgLsC
