--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -1,17 +1,52 @@
 ---
-- name: temporarily disable monitoring
-  command: monit unmonitor smisc-manager
-  tags:
-    - hot
+- name: ensure local directory structure is set up
+  command: mkdir -p "{{ item }}" creates={{ item }}
+  with_items:
+    - /var/local/log 
+    - /var/local/run
+
+- name: add base repositories
+  apt_repository: repo='{{item}}' state=present
+  with_items:
+    - deb http://http.debian.net/debian wheezy main contrib non-free
+    - deb-src http://http.debian.net/debian wheezy main contrib non-free
 
 - name: install base packages
   apt: name={{ item }} state=latest
   with_items: 
+    - ntp
+    - vim
+    - python3-pip
+    - python-pip
+    - build-essential
+    - python-dev
+    - python3-dev
+    - monit
+    - libpq-dev
+    - htop
     - postgresql
     - php5-fpm
     - php5-pgsql
     - nginx
     - redis-server
+
+- name: Install Python modules for 3-2
+  pip: name={{ item }} executable=pip-3.2
+  with_items:
+    - TwitterAPI
+    - redis
+    - psycopg2
+
+- name: Install Python modules for 2-7
+  pip: name={{ item }} executable=pip-2.7
+  with_items:
+    - psycopg2
+
+
+- name: temporarily disable monitoring
+  command: monit unmonitor smisc-manager
+  tags:
+    - hot
 
 - name: Synchronize nginx site configuration
   synchronize: src=config/nginx/sites-enabled/ dest=/etc/nginx/sites-enabled/
@@ -34,8 +69,8 @@
   notify:
     - restart redis
 
-- name: Synchronize manager's initscript
-  synchronize: src=config/initscripts/smisc-manager dest=/etc/init.d/smisc-manager
+- name: Synchronize channel scraper init script
+  synchronize: src=config/initscripts/smisc-scraper-channel dest=/etc/init.d/smisc-scraper-channel
 
 - name: Synchronize php-fpm config
   synchronize: src=config/php/{{ item }} dest=/etc/php5/fpm/{{ item }} archive=no
@@ -47,9 +82,14 @@
     - restart php
 
 - name: Synchronize monit scripts
-  synchronize: src=config/monit/conf.d/ dest=/etc/monit/conf.d/ group=no owner=no perms=no recursive=yes
+  synchronize: src=config/monit/ dest=/etc/monit/ group=no owner=no perms=no recursive=yes
   notify:
      - restart monit
+
+- name: Ensure files have the proper mode and owner
+  file: path={{ item.src }} owner={{ item.owner | default("root") }} mode={{ item.mode | default(0700) }}
+  with_items:
+    - { src: "/etc/monit/monitrc" }
 
 - name: Deploy smisc code
   synchronize: src=src/ dest=/usr/local/src/smisc/
@@ -70,7 +110,7 @@
   postgresql_db: name=pacsocial state=present owner=pacsocial
 
 - name: Deploy smisc configuration
-  synchronize: src=../../common/files/config/smisc.ini dest=/usr/local/share/smisc.ini
+  synchronize: src=config/smisc.ini dest=/usr/local/share/smisc.ini
   tags: 
     - hot
   notify:
@@ -82,6 +122,7 @@
     - postgresql
     - nginx
     - php5-fpm
+    - monit
   tags:
     - hot
 
