--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -110,6 +110,8 @@
   file: path={{ item.src }} owner={{ item.owner | default("root") }} mode={{ item.mode | default(0700) }}
   with_items:
     - { src: "/etc/monit/monitrc" }
+    - { src: "/usr/local/share/nginx/{{ fqdn }}.crt", owner: "www-data", mode: 400 }
+    - { src: "/usr/local/share/nginx/{{ fqdn }}.key", owner: "www-data", mode: 400 }
   tags:
     - monit
 
