--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -170,5 +170,8 @@
 - name: turn on the channel scraper job
   cron: name="channel scraper" state=present minute="*" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py channel"
 
+- name: turn on the follower scraper job
+  cron: name="follower scraper" state=present minute="0,30" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py followers"
+
 - name: turn on the hourly backup job
   cron: name="hourly backups" state=present minute="0" hour="*/3" day="*" month="*" job="python3 /usr/local/bin/smisc-backup.py"
