--- a/roles/manager/tasks/main.yml
+++ b/roles/manager/tasks/main.yml
@@ -173,5 +173,8 @@
 - name: turn on the follower scraper job
   cron: name="follower scraper" state=present minute="*" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py followers"
 
+- name: turn on the competition tweets scraper scraper job
+  cron: name="competition tweets scraper" state=present minute="*" hour="*" day="*" month="*" job="python3 /usr/local/src/smisc/app.py competition-tweets"
+
 - name: turn on the hourly backup job
   cron: name="hourly backups" state=present minute="0" hour="*/3" day="*" month="*" job="python3 /usr/local/bin/smisc-backup.py"
