--- a/roles/manager/files/config/smisc.ini
+++ b/roles/manager/files/config/smisc.ini
@@ -1,6 +1,13 @@
 [smisc]
 log = /var/local/log/smisc.log
 
+[glacier]
+key = AKIAI5NXLISN6MXU6I4A
+secret = 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
+region = us-west-2
+vault-postgresqlbackups = postgresql-backups
+sns_topic = arn:aws:sns:us-west-2:898852207045:backups
+
 [twitter]
 keys: 83UirqBmv5RoEkXpNn8rSa1z0
     funjZzePR12pL6zLC1ptm7il0
