PostgreSQL - add password for pacsocial user

--- a/roles/manager/files/config/postgresql/pg_hba.conf
+++ b/roles/manager/files/config/postgresql/pg_hba.conf
@@ -85,9 +85,8 @@
 local   all             postgres                                peer
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
-host    pacsocial  	pacsocial  	104.131.176.27/32  	trust
-host    pacsocial  	pacsocial  	104.131.71.175/32  	trust
-host    pacsocial  	pacsocial  	127.0.0.1/32  		trust
+host    pacsocial  	pacsocial  	104.131.176.27/32  	md5
+host    pacsocial  	pacsocial  	127.0.0.1/32  		md5
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     trust
