--- a/roles/manager/handlers/main.yml
+++ b/roles/manager/handlers/main.yml
@@ -1,12 +1,10 @@
-- name: restart manager
-  service: name=smisc-manager state=restarted
-- name: restart nginx
-  service: name=nginx state=restarted
-- name: restart postgresql
-  service: name=postgresql state=restarted
-- name: restart redis
-  service: name=redis-server state=restarted
-- name: restart php
-  service: name=php5-fpm state=restarted
-- name: restart monit
-  service: name=monit state=restarted
+- name: reload nginx
+  service: name=nginx state=reloaded
+- name: reload postgresql
+  service: name=postgresql state=reloaded
+- name: reload redis
+  service: name=redis-server state=reloaded
+- name: reload php
+  service: name=php5-fpm state=reloaded
+- name: reload monit
+  service: name=monit state=reloaded
