--- a/roles/manager/files/config/smisc.ini
+++ b/roles/manager/files/config/smisc.ini
@@ -44,7 +44,7 @@ secrets: YmFhh7c3yr4AwmMtmodNm6MFc2lq60bv6qZanJqSWYbpxAPALC
 
 [postgres]
 username = pacsocial
-password = 
+password = 1234qwer
 host = 104.131.176.27
 port = 5432
 database = pacsocial
